--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "types": ["jest"],
     "moduleResolution": "node",
     "baseUrl": ".",
